# Graphics-Engine

./:  - Copy.gitignore  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Graphics-Engine.sln  Graphics-Engine.vcxproj  vcpkg.json
shaders/: basic.fs  basic.vs  lightShader.fs  lightShader.vs
src/: Camera.h  Light.h  Shader.h  glad.c  main.cpp
